adding tag component for nested component demo

--- a/apps/storybook-training/src/app/components/card/card.component.html
+++ b/apps/storybook-training/src/app/components/card/card.component.html
@@ -4,4 +4,4 @@
 <section>
   <ng-content></ng-content>
 </section>
-<span class="tag">{{ tag }}</span>
+<storybook-training-tag class="tag">{{ tag }}</storybook-training-tag>
